--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -50,7 +50,7 @@
     --name-bg: #d95b72;
 
     /* Background Colors & BG Image */
-    --bg-gradient1: #e297b2;
+    --bg-gradient1: #738678;
     --bg-gradient2: #c0b4d5;
     --bg-gradient3: #54b5de;
     --bg-image: none; /* Write the image url, example url("your url") [none is default]*/
