--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -51,7 +51,7 @@
 
     /* Background Colors & BG Image */
     --bg-gradient1: #738678;
-    --bg-gradient2: #c0b4d5;
+    --bg-gradient2: #738678;
     --bg-gradient3: #54b5de;
     --bg-image: none; /* Write the image url, example url("your url") [none is default]*/
     --opacity: 0; /* Value in numbers from 0 to 1, but there is a limit */
