--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -52,8 +52,8 @@
     /* Background Colors & BG Image */
     --bg-gradient1: #738678;
     --bg-gradient2: #738678;
-    --bg-gradient3: #54b5de;
-    --bg-image: none; /* Write the image url, example url("your url") [none is default]*/
+    --bg-gradient3: #738678;
+    --bg-image: https://media.discordapp.net/attachments/1129507799324430538/1129523457072308287/image.png?width=1202&height=676
     --opacity: 0; /* Value in numbers from 0 to 1, but there is a limit */
     --bg-blur: 6px; /* Value in px */
 
