--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -45,7 +45,7 @@
 
     /* General Colors */
     --border-color: #da4a60;
-    --drag-gradient1: #e8c4d3;
+    --drag-gradient1: #738678;
     --drag-gradient2: #e39ba7;
     --name-bg: #d95b72;
 
