--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -44,9 +44,9 @@
     --custom-text: "TSUKINO MITO";
 
     /* General Colors */
-    --border-color: #da4a60;
+    --border-color: #4e5c52;
     --drag-gradient1: #738678;
-    --drag-gradient2: #e39ba7;
+    --drag-gradient2: #738678;
     --name-bg: #d95b72;
 
     /* Background Colors & BG Image */
