--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -68,20 +68,20 @@
     --darkL: 16%;   /* Value in % [16% is default] */
 
     /* Windows Buttons Colors */
-    --close-color: #da5169;
-    --max-color: #ffdf5b;
-    --min-color: #00a0cb;
+    --close-color: #dbb8d3;
+    --max-color: #afdbb7;
+    --min-color: #dbd6af;
 
     /* Status Colors */
-    --online-color: #60e046;
-    --idle-color: #ffca3a;
-    --dnd-color: #f73c3c;
-    --offline-color: #707070;
-    --streaming-color: #f066f0;
+    --online-color: #afdbb7;
+    --idle-color: #dbd6af;
+    --dnd-color: #dbb8d3;
+    --offline-color: #818281;
+    --streaming-color: #9dbcd4;
 
     /* Chatbar Colors */
     --channeltextarea-background: #F0F2F2;
-    --text-color: #313D40;
+    --text-color: #4e5c52;
     --icon-color: var(--text-color);
     --selected-text-bg: var(--text-color);
     --selected-text-color: var(--channeltextarea-background);
