--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -80,7 +80,7 @@
     --streaming-color: #9dbcd4;
 
     /* Chatbar Colors */
-    --channeltextarea-background: #F0F2F2;
+    --channeltextarea-background: https://media.discordapp.net/attachments/1129507799324430538/1129523457072308287/image.png?width=1202&height=676;
     --text-color: #4e5c52;
     --icon-color: var(--text-color);
     --selected-text-bg: var(--text-color);
