--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -53,7 +53,7 @@
     --bg-gradient1: #738678;
     --bg-gradient2: #738678;
     --bg-gradient3: #738678;
-    --bg-image: ('https://media.discordapp.net/attachments/1129507799324430538/1129523457072308287/image.png?width=1202&height=676');
+    --bg-image: https://media.discordapp.net/attachments/1129507799324430538/1129523457072308287/image.png?width=1202&height=676;
     --opacity: 0; /* Value in numbers from 0 to 1, but there is a limit */
     --bg-blur: 6px; /* Value in px */
 
@@ -80,7 +80,7 @@
     --streaming-color: #9dbcd4;
 
     /* Chatbar Colors */
-    --channeltextarea-background: https://media.discordapp.net/attachments/1129507799324430538/1129523457072308287/image.png?width=1202&height=676;
+    --channeltextarea-background: https://raw.githubusercontent.com/kvfushi/Moon-Rabbits-Dream-About-Virtual/main/Moon-Rabbits-Dream-About-Virtual.theme.css ;
     --text-color: #4e5c52;
     --icon-color: var(--text-color);
     --selected-text-bg: var(--text-color);
