--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -53,7 +53,7 @@
     --bg-gradient1: #738678;
     --bg-gradient2: #738678;
     --bg-gradient3: #738678;
-    --bg-image: 
+    --bg-image: #738678;
     --opacity: 0; /* Value in numbers from 0 to 1, but there is a limit */
     --bg-blur: 6px; /* Value in px */
 
