--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -47,14 +47,14 @@
     --border-color: #4e5c52;
     --drag-gradient1: #738678;
     --drag-gradient2: #738678;
-    --name-bg: #d95b72;
+    --name-bg: #738678;
 
     /* Background Colors & BG Image */
     --bg-gradient1: #738678;
     --bg-gradient2: #738678;
     --bg-gradient3: #738678;
     --bg-image: #738678;
-    --opacity: 0; /* Value in numbers from 0 to 1, but there is a limit */
+    --opacity: 1; /* Value in numbers from 0 to 1, but there is a limit */
     --bg-blur: 6px; /* Value in px */
 
     /* HSL(Hue, Saturation, Lightness). This values will change the accent color (That blue color in most buttons) */
@@ -94,8 +94,8 @@
 
 /* Selection text color */
 ::selection {
-    background-color: var(--selected-text-bg); /* text selection*/
-    color: var(--selected-text-color); /* text color */
+    background-color: var(#738678;); /* text selection*/
+    color: var(#738678;); /* text color */
 }
 
 /*------------------------------------------------------
