--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -47,7 +47,7 @@
     --border-color: #3f4a42;
     --drag-gradient1: #738678;
     --drag-gradient2: #738678;
-    --name-bg: #738678;
+    --name-bg: #4e5c52;
 
     /* Background Colors & BG Image */
     --bg-gradient1: #738678;
